LHB - 전문가인회원이 포트폴리오 작성 시 전문가 테이블 중복 생성 안됨. 관리자 - 심사 승인 memberType 변경[완]